@@ -17,6 +17,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 	Tom Collins
 	- vlimits.c: print errors to stderr.
+	- vmoduser.c: add clarity to usage/help for bit flags.
 
 	Michael Bowe
 	- configure.in: fix typo of where the configure script says it
